@@ -39,10 +39,11 @@
 #define MACRO_TYPE_INTERFACE_PORT	0x0100
 #define MACRO_TYPE_FUNCTION_PARAMETER	0x0200
 #define MACRO_TYPE_ITEM_FIELD		0x0400
-#define MACRO_TYPE_SCRIPT		0x0800
-#define MACRO_TYPE_ITEM_EXPRESSION	0x1000
-#define MACRO_TYPE_LLD_LIFETIME		0x2000
-#define MACRO_TYPE_SNMP_OID		0x4000
+#define MACRO_TYPE_PARAMS_FIELD		0x0800
+#define MACRO_TYPE_SCRIPT		0x1000
+#define MACRO_TYPE_ITEM_EXPRESSION	0x2000
+#define MACRO_TYPE_LLD_LIFETIME		0x4000
+#define MACRO_TYPE_SNMP_OID		0x8000
 
 #define STR_CONTAINS_MACROS(str)	(NULL != strchr(str, '{'))
 
